# emojify

./: Dockerfile  cli.py  data.py  describe.py  emojify.py  explore.ipynb  fly.toml  people.py  pyproject.toml  ranker.py  server.py
data/: make_data.py  personas.csv
